<resources>
    <string name="app_name">BLU</string>


    <!-- SINGLES-->

    <string name="name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Email</string>
    <string name="phone">Celular</string>
    <string name="cc">Cédula</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Registrarme</string>
    <string name="start">Inicar</string>
    <string name="finish">Finalizar</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="login">Login</string>
    <string name="accept">Aceptar</string>
    <string name="rates">Tarifas</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="plate">Placa</string>

    <!-- MESSAGES-->
    <string name="error_network">Hubo un problema en la conexión a la red</string>
    <string name="error_add_request">El servicio no esta disponible, intentalo luego.</string>
    <string name="msg_failed_result_service">No se pudierón enviar los datos de este servicio a la central, intentalo luego.</string>
    <string name="error_invalid_email">Este email es invalido</string>
    <string name="error_invalid_password">El password es demasiado corto</string>
    <string name="error_incorrect_password">Usurio o Contraseña incorrectos</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_geocode_address">No logramos obtener la dirección de este punto.</string>
    <string name="msg_waiting_location">Estamos recuperando tu ubicación.</string>


    <!-- TAGS-->
    <string name="pickup_arrival_address">Dirección de recogida y destino</string>
    <string name="payment_method">Método de pago</string>
    <string name="request_service">Solicitar Servicio</string>
    <string name="service_number">Tu número de servicio es:</string>
    <string name="box_office_hour">Dirigete a la taquilla antes de:</string>
    <string name="openDrawer">Abrir navegación:</string>
    <string name="closeDrawer">Cerrar navegación:</string>
    <string name="new_request">Nuevo Servicio</string>
    <string name="my_request">Mis Servicios</string>
    <string name="pickup_here">Recojeme Aquí</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receipt">Recibo Aprobación</string>
    <string name="title_activity_request_list">Historial del servicios</string>
    <string name="title_activity_singout">Registro</string>

    <!-- ARRAYS-->
    <string-array name="payment_methods">
        <item>Punto Transnal BLU</item>
        <item>Tarjeta Débito o Crédito</item>
    </string-array>

    <string name="title_activity_request_detail">Detalle del servicio</string>
    <string name="title_activity_map_pickup">Lugar de recogida</string>
    <string name="title_activity_new_request_form">Detalles del servicio</string>
    <string name="title_activity_rates">Tarifas</string>

</resources>
