<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_new_request"
            android:checked="true"
            android:icon="@mipmap/ic_car"
            android:title="@string/new_request"/>

        <item
            android:id="@+id/drawer_my_request"
            android:icon="@mipmap/ic_request"
            android:title="@string/my_request"/>

        <item
            android:id="@+id/drawer_rates"
            android:icon="@mipmap/ic_amount"
            android:title="@string/rates"/>

        <item
            android:id="@+id/drawer_logout"
            android:icon="@mipmap/ic_close"
            android:title="@string/logout"/>


    </group>
</menu>
