<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.acktos.bluclient.presentation.ReceiptActivity">


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="30dp"
        android:src="@mipmap/ic_logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbl_payment"
        android:id="@+id/service_number_card">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_number"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_below="@id/arrival_card"
                style="@style/Base.TextAppearance.AppCompat.Small"/>


            <TextView
                android:id="@+id/txt_receipt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="66"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_below="@id/arrival_card"
                style="@style/Base.TextAppearance.AppCompat.Small"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbl_payment"
        android:id="@+id/service_hour_card">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/box_office_hour"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_below="@id/arrival_card"
                style="@style/Base.TextAppearance.AppCompat.Small"/>


            <TextView
                android:id="@+id/txt_service_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="12:00 PM"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_below="@id/arrival_card"
                style="@style/Base.TextAppearance.AppCompat.Small"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button android:id="@+id/btn_accept_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/accept"/>


</LinearLayout>
