<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.acktos.bluclient.presentation.NewRequestFormActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/request_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal"/>


    <ScrollView
        android:id="@+id/request_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    <LinearLayout
        android:id="@+id/layout_request_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_addresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_arrival_address"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        style="@style/Base.TextAppearance.AppCompat.Small"/>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lbl_addresses"
        android:id="@+id/arrival_card">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/ic_pickup"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignTop="@+id/edtx_pickup_address"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_pickup_address" />


            <EditText
                android:id="@+id/edtx_pickup_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ic_pickup"
                android:layout_toEndOf="@+id/ic_pickup"
                android:gravity="center_vertical"
                android:textSize="14sp"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/ic_arrival"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_below="@id/ic_pickup"
                android:layout_alignBottom="@+id/edtx_arrival_address"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/ic_arrival" />

            <EditText
                android:id="@+id/edtx_arrival_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ic_arrival"
                android:layout_toEndOf="@+id/ic_arrival"
                android:layout_below="@id/edtx_pickup_address"
                android:gravity="center_vertical"
                android:textSize="14sp"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/lbl_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textAllCaps="true"
        android:layout_marginLeft="6dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:layout_below="@id/arrival_card"
        style="@style/Base.TextAppearance.AppCompat.Small"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbl_payment"
        android:id="@+id/payment_card">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/ic_credit_card"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignTop="@+id/spnr_payment"
                android:layout_marginTop="10dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_credit_card" />


            <Spinner
                android:id="@+id/spnr_payment"
                android:layout_width="fill_parent"
                android:layout_toRightOf="@+id/ic_credit_card"
                android:layout_toEndOf="@+id/ic_credit_card"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_request_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/request_service"/>

</RelativeLayout>
